# doodba

./: .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  README.md  README.md.jinja  copier.yml  devel.yaml  docker-compose.devel.yaml.jinja  docker-compose.prod.yaml.jinja  docker-compose.test.yaml.jinja  pyproject.toml  tasks.py
.github/workflows/: invoke.yml
odoo/custom/dependencies/: pip.txt
odoo/custom/src/: addons.yaml  repos.yaml
scripts/: fill_code_workspace.py
tests/: helpers.py  test_default_settings.py
tests/default_settings/: .copier-answers.yml  .editorconfig  README.md  docker-compose.devel.yaml  docker-compose.prod.yaml  docker-compose.test.yaml
